# NFAToDFA

./: .gitignore  LICENSE  Main.hs  NFAToDFA.cabal  README.md
src/Data/HashMap/: NonEmpty.hs
src/Data/HashSet/: NonEmpty.hs
src/Math/Automata/: Simple.hs
tests/: fail-invalidEscape.test  fail-invalidEscape.test.golden  pass-example1.test.golden  pass-example2.test  pass-example2.test.golden  pass-example3.test  pass-example3.test.golden  pass-noOutGoingTransState.test  pass-noOutGoingTransState.test.golden  pass-noTransFinals.test.golden  pass-setsAsStateNames.test  pass-setsAsStateNames.test.golden  pass-subset-example1.test  pass-subset-example1.test.golden  pass-subset-example2.test  pass-subset-example2.test.golden  test.hs
