name:                
      NFAToDFA
version:             
      0.1.0.0
synopsis:            
      A very simple NFA toolset: parsing from a custom format, outputting in
      graphviz DOT format and subset construction to form DFAs 
license:             
      BSD3
license-file:        
      LICENSE
author:              
      Owen Stephens
maintainer:          
      owen@owenstephens.co.uk
build-type:          
      Simple
cabal-version:       
      >=1.10

library
  hs-source-dirs:   
      src
  exposed-modules:  
      Data.HashSet.NonEmpty
    , Data.HashMap.NonEmpty
    , Math.Automata.Simple

  build-depends:    
      base >= 4 && < 5 
    , hashable >= 1.0.1.1
    , unordered-containers >= 0.2.0.0
    , text >= 0.11.0.8
    , lens >= 3.0
    , transformers >= 0.3.0.0
    , text-format >= 0.3.0.0
    , semigroups >= 0.5.0
    , parsec >= 3.1.0

  default-language: 
      Haskell2010

executable NFAToDFA
  main-is:          
      Main.hs
  build-depends:    
      base >= 4 && < 5 
    , NFAToDFA
    , optparse-applicative >= 0.1.0
    , unordered-containers >= 0.2.0.0
    , text >= 0.11.0.8
  default-language: 
      Haskell2010

test-suite test
  type:             
    exitcode-stdio-1.0
  hs-source-dirs:   
    tests
  main-is:          
    test.hs
  build-depends: 
      NFAToDFA
    , base >= 4 && < 5 
    , tasty >= 0.7 
    , tasty-golden >= 2.0 
    , directory >= 1.2.0.0
    , process >= 1.2.0.0
    , filepath >= 1.2.0.0
  default-language: 
      Haskell2010
